--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Stats preview card component</title>
+    <title>Frontend Mentor | Stats preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+
 </head>
 <body>
 
-  Get insights that help your business grow.
+    <main>
+        <div class="main-content">
+            <div class="info">
+                <h1 class="info-title">Get <span>insights</span> that help your business grow.</h1>
+                <p class="info-text">Discover the benefits of data analytics and make better decisions regarding revenue, experience, and overall efficiency.</p>
+            </div>
+            <div class="stats">
+                <div class="stats-box">
+                    <h2 class="stats-title">10k+</h2>
+                    <p class="stats-desc">companies</p>
+                </div>
+                <div class="stats-box">
+                    <h2 class="stats-title">314</h2>
+                    <p class="stats-desc">templates</p>
+                </div>
+                <div class="stats-box">
+                    <h2 class="stats-title">12m+</h2>
+                    <p class="stats-desc">queries</p>
+                </div>
+            </div>
+        </div>
+        <div class="image">
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+        </div>
+    </main>
 
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <footer>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="#">Your Name Here</a>.
+        </div>
+    </footer>
 </body>
 </html>
