Feat: Prepairing css and fonts

--- a/index.html
+++ b/index.html
@@ -8,34 +8,44 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
+
+
 
 </head>
 <body>
 
     <main>
-        <div class="main-content">
-            <div class="info">
-                <h1 class="info-title">Get <span>insights</span> that help your business grow.</h1>
-                <p class="info-text">Discover the benefits of data analytics and make better decisions regarding revenue, experience, and overall efficiency.</p>
+        <div class="card">
+            <div class="main-content">
+                <div class="info">
+                    <h1 class="info-title">Get <span>insights</span> that help your business grow.</h1>
+                    <p class="info-text">Discover the benefits of data analytics and make better decisions regarding revenue, experience, and overall efficiency.</p>
+                </div>
+                <div class="stats">
+                    <div class="stats-box">
+                        <h2 class="stats-title">10k+</h2>
+                        <p class="stats-desc">companies</p>
+                    </div>
+                    <div class="stats-box">
+                        <h2 class="stats-title">314</h2>
+                        <p class="stats-desc">templates</p>
+                    </div>
+                    <div class="stats-box">
+                        <h2 class="stats-title">12m+</h2>
+                        <p class="stats-desc">queries</p>
+                    </div>
+                </div>
             </div>
-            <div class="stats">
-                <div class="stats-box">
-                    <h2 class="stats-title">10k+</h2>
-                    <p class="stats-desc">companies</p>
-                </div>
-                <div class="stats-box">
-                    <h2 class="stats-title">314</h2>
-                    <p class="stats-desc">templates</p>
-                </div>
-                <div class="stats-box">
-                    <h2 class="stats-title">12m+</h2>
-                    <p class="stats-desc">queries</p>
-                </div>
-            </div>
-        </div>
-        <div class="image">
+            <div class="image">
+                <div class="background">
 
+                </div>
+            </div>
         </div>
+        
     </main>
 
     <footer>
