--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+
 
 
 </head>
@@ -22,7 +25,7 @@
             <div class="main-content">
                 <div class="info">
                     <h1 class="info-title">Get <span>insights</span> that help your business grow.</h1>
-                    <p class="info-text">Discover the benefits of data analytics and make better decisions regarding revenue, experience, and overall efficiency.</p>
+                    <p class="info-text">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
                 </div>
                 <div class="stats">
                     <div class="stats-box">
@@ -34,25 +37,24 @@
                         <p class="stats-desc">templates</p>
                     </div>
                     <div class="stats-box">
-                        <h2 class="stats-title">12m+</h2>
+                        <h2 class="stats-title">12M+</h2>
                         <p class="stats-desc">queries</p>
                     </div>
                 </div>
             </div>
             <div class="image">
-                <div class="background">
-
-                </div>
+                <div class="overlay"></div>
+                <div class="background"></div>
             </div>
         </div>
-        
+
     </main>
 
-    <footer>
+    <!-- <footer>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
             Coded by <a href="#">Your Name Here</a>.
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
